# fanyiqi

./: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
client/: Makefile  go.mod  go.sum  main.go
client/cmd/gui/: gui.go  main.go
client/internal/config/: config.go
client/internal/translator/: service.go
client/pkg/http/: client.go
client/ui/views/: entry.go  select.go  text_input.go  text_output.go
cmd/gui/: main.go
server/: .env  Makefile  app.db  main.py  pyproject.toml  tmp-reqs.txt
server/app/api/routes/: auth.py  routes.py  shared.py  translation.py
server/app/core/: config.py  database.py  security.py
server/app/core/ai/: base_model.py
server/app/core/ai/models/: __init__.py  cf2ast_facebook_m2m100_418M.py  exceptions.py  facebook_m2m100_418M.py
server/app/core/providers/: __init__.py  cf2ast_facebook_m2m100_418M.py  facebook_m2m100_418M.py  google_translate.py
server/app/services/: auth.py  translation.py
server/containerfile/: Dockerfile  docker-compose.yaml
server/scripts/: download_models.py  generate_db.sh
ui/utils/: window.go
ui/views/: entry.go  loading.go  select.go  select_entry.go  text_input.go  text_output.go  theme.go
